# TemplateTool

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
src/: TemplateTool.cpp  TemplateTool.h  common.h  main.cpp
src/ui/: ImageWidget.cpp  ImageWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatchResultItem.cpp  MatchResultItem.h  TemplateListWidget.cpp  TemplateListWidget.h  TemplateScene.cpp  TemplateScene.h
src/util/: util.cpp  util.h
templates/: konca_50x_2mm.xcf  zhongqi_01.xcf
